force-app/main/default/objects/ActionItemCreateCustom__c/ActionItemCreateCustom__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It use in ActionItemCreateTrigger</description>
    <label>ActionItemCreateCustom</label>
</CustomObject>