force-app/main/default/objects/ActionItemCreateCustom__c/fields/Compare_Fields__c.field-meta.xml
<CustomField>
    <fullName>Compare_Fields__c</fullName>
    <label>Compare Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>