force-app/main/default/objects/ActionItemCreateCustom__c/fields/InsertEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>InsertEmailTemplate__c</fullName>
    <label>InsertEmailTemplate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>