force-app/main/default/objects/ActionItemCreateCustom__c/fields/IsInsertExecution__c.field-meta.xml
<CustomField>
    <fullName>IsInsertExecution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInsertExecution</label>
    <type>Checkbox</type>
</CustomField>