force-app/main/default/objects/ActionItemCreateCustom__c/fields/IsUpdateExecution__c.field-meta.xml
<CustomField>
    <fullName>IsUpdateExecution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUpdateExecution</label>
    <type>Checkbox</type>
</CustomField>