force-app/main/default/objects/ActionItemCreateCustom__c/fields/NewActionItemEmailCc__c.field-meta.xml
<CustomField>
    <fullName>NewActionItemEmailCc__c</fullName>
    <label>NewActionItemEmailCc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>