force-app/main/default/objects/ActionItemCreateCustom__c/fields/UpdateEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>UpdateEmailTemplate__c</fullName>
    <label>UpdateEmailTemplate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>